--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 <html lang="en-ca">
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>Chris Mantil · Pretty. Good. Graphic Design. · Ottawa, Canada</title>
 <link rel="stylesheet" href="css/general.css">
+<meta name="description" content="Chris Mantil, Graphic Designer Extraordinaire, Ottawa, ON, Canada.">
+<!--Facebook Open Graph meta tags. Also works on Pinterest -->
+<meta property="og:type" content="article">
+<meta property="og:title" content="copy and paste title tag">
+<meta property="og:url" content="http://chrismantil.ca">
+<meta property="og:site_name" content="Chris Mantil · Graphic Design">
+<meta property="og:description" content="copy and paste meta description">
+<!-- Facebook allows up to 5 images -->
+<meta property="og:image" content="http://chrismantil.ca/img/something">
+<meta property="og:image" content="http://chrismantil.ca/img/something">
+<meta property="og:image" content="http://chrismantil.ca/img/something">
+<meta property="og:image" content="http://chrismantil.ca/img/something">
+<meta property="og:image" content="http://chrismantil.ca/img/something">
+<!-- Twitter meta tags -->
+<meta name="twitter:card" content="gallery">
+<meta name="twitter:title" content="">
+<meta name="twitter:url" content="">
+<meta name="twitter:description" content="">
+<meta name="twitter:image0" content="">
+<meta name="twitter:image1" content="">
+<meta name="twitter:image2" content="">
+<meta name="twitter:image3" content="">
 </head>
 <body>
 
-<h1>OMG WEBSITE!</h1>
+<h1><img src="" alt="Chris Mantil, Graphic Designer"></h1>
+<p>Describe yourself with awesome keywords. Maybe use your why.</p>
+
 
 </body>
 </html>
