--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 </head>
 <body>
 
-<h1><img src="" alt="Chris Mantil, Graphic Designer"></h1>
-<p>Describe yourself with awesome keywords. Maybe use your why.</p>
+<h1><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
 
 
 </body>
