--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Chris Mantil · Pretty. Good. Graphic Design. · Ottawa, Canada</title>
 <link rel="stylesheet" href="css/general.css">
+<link rel="shortcut icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
+<link rel="icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
 <meta name="description" content="Chris Mantil, Graphic Designer Extraordinaire, Ottawa, ON, Canada.">
 <!--Facebook Open Graph meta tags. Also works on Pinterest -->
 <meta property="og:type" content="article">
