--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 </head>
 <body>
 
+<header class="nav">
 <h1><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
-
+</header>
 
 </body>
 </html>
