--- a/index.html
+++ b/index.html
@@ -31,9 +31,36 @@
 </head>
 <body>
 
+<div class="menuicon">
+<a href="#nav" class="btn"><img src="img/menu-icon.svg"/></a>
+</div>
+
 <header class="nav">
-<h1><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
+<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
 </header>
+
+
+<!--Portfolio-->
+
+<div class="portfolio">
+<img src="img/dominion_city.png">
+</div>
+
+<div class="portfolio">
+<img src="img/dorian_gray.png">
+</div>
+
+<div class="portfolio">
+<img src="img/about.png">
+</div>
+
+<div class="portfolio">
+<img src="img/carlington_cup.png">
+</div>
+
+<div class="portfolio">
+<img src="img/risico.png">
+</div>
 
 </body>
 </html>
