--- a/index.html
+++ b/index.html
@@ -41,25 +41,33 @@
 
 
 <!--Portfolio-->
+<div class="wrapper">
 
-<div class="portfolio">
-<img src="img/dominion_city.png">
-</div>
+	<div class="portfolio">
+		<img src="img/dominion_city.png">
+			<div class="rollover">Text</div>
+	</div>
 
-<div class="portfolio">
-<img src="img/dorian_gray.png">
-</div>
+	<div class="portfolio">
+		<img src="img/dorian_gray.png">
+			<div class="rollover">Text</div>
+	</div>
 
-<div class="portfolio">
-<img src="img/about.png">
-</div>
+	<div class="portfolio">
+		<img src="img/about.png">
+			<div class="rollover">Text</div>
+	</div>
 
-<div class="portfolio">
-<img src="img/carlington_cup.png">
-</div>
+	<div class="portfolio">
+		<img src="img/carlington_cup.png">
+			<div class="rollover">Text</div>
+	</div>
 
-<div class="portfolio">
-<img src="img/risico.png">
+	<div class="portfolio">
+		<img src="img/risico.png">
+			<div class="rollover">Text</div>
+	</div>
+
 </div>
 
 </body>
