--- a/404.html
+++ b/404.html
@@ -1,1 +1,13 @@
+<!DOCTYPE <!DOCTYPE html>
+<html lang="en-ca">
+<head>
+	<meta charset="utf-8">
+	<title>Page Not Found</title>
+</head>
+<body>
+
 <p>404!</p>
+
+</body>
+</html>
+
