--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Chris Mantil · Pretty. Good. Graphic Design. · Ottawa, Canada</title>
+<link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/general.css">
 <link rel="shortcut icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
@@ -45,27 +46,27 @@
 
 	<div class="portfolio">
 		<img src="img/dominion_city.png">
-			<div class="rollover">Text</div>
+			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
 	<div class="portfolio">
 		<img src="img/dorian_gray.png">
-			<div class="rollover">Text</div>
+			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
 	<div class="portfolio">
 		<img src="img/about.png">
-			<div class="rollover">Text</div>
+			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
 	<div class="portfolio">
 		<img src="img/carlington_cup.png">
-			<div class="rollover">Text</div>
+			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
 	<div class="portfolio">
 		<img src="img/risico.png">
-			<div class="rollover">Text</div>
+			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
 </div>
