--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/general.css">
 <link rel="shortcut icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="description" content="Chris Mantil, Graphic Designer Extraordinaire, Ottawa, ON, Canada.">
 <!--Facebook Open Graph meta tags. Also works on Pinterest -->
 <meta property="og:type" content="article">
