--- a/index.html
+++ b/index.html
@@ -30,47 +30,76 @@
 <meta name="twitter:image1" content="">
 <meta name="twitter:image2" content="">
 <meta name="twitter:image3" content="">
+<link rel="stylesheet" href="css/responsive-nav.css">
+<script src="js/responsive-nav.js"></script>
 </head>
 <body>
 
+<nav class="nav-collapse">
+	<ul>
+		<li><a href="#about">About</a></li>
+		<li><a href="#contact">Contact</a></li>
+ 	</ul>
+</nav>
+
 <div class="menuicon">
-<a href="#nav" class="btn"><img src="img/menu-icon.svg"/></a>
+	<a href="#nav" class="btn"><img src="img/menu-icon.svg"/></a>
 </div>
 
 <header class="nav">
-<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
+	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
 </header>
-
 
 <!--Portfolio-->
 <div class="wrapper">
 
 	<div class="portfolio">
-		<img src="img/dominion_city.png">
-			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+		<img src="img/dominion_city.png" alt="">
+		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
 	<div class="portfolio">
-		<img src="img/dorian_gray.png">
-			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+		<img src="img/dorian_gray.png" alt="">
+		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+	</div>
+
+	<div id="about" class="portfolio">
+		<img src="img/about.png" alt="">
 	</div>
 
 	<div class="portfolio">
-		<img src="img/about.png">
-			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+		<img src="img/carlington_cup.png" alt="">
+		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
 	<div class="portfolio">
-		<img src="img/carlington_cup.png">
-			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+		<img src="img/risico.png" alt="">
+		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
-	<div class="portfolio">
-		<img src="img/risico.png">
-			<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+	<div id="contact" class="portfolio">
+		<img src="img/about.png" alt="">
 	</div>
 
 </div>
 
+<footer>
+
+	<div class="footer-content">
+		<p>© 2014 Chris Mantil Design. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
+
+		<div class="footer-nav">
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</div>
+</div>
+
+</footer>
+
+<script>
+	var nav = responsiveNav(".nav-collapse");
+</script>
 </body>
 </html>
