Second attempt at mobile nag

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
 </head>
 <body>
 
+    <div id="nav">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+    <button id="nav-toggle">Menu</button>
+
 <header class="nav">
 	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
 </header>
@@ -84,6 +93,5 @@
 </div>
 
 </footer>
-
 </body>
 </html>
