--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
 </head>
 <body>
 
-    <div id="nav">
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-
-    <button id="nav-toggle">Menu</button>
+<div class="navbar">
+	<ul>
+		<li><a href="#about">About</a></li>
+		<li><a href="#contact">Contact</a></li>
+	</ul>
+</div>
 
 <header class="nav">
 	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
