Added Footer Contact Info

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
 
 		<div class="footer-nav">
 			<ul>
-				<li><a href="#about">About</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="tel:+6136177922">613-617-7922</a></li>
+				<li><a href="mailto:design@chrismantil">design@chrismantil.com</a></li>
+				<li><a href="https://twitter.com/chrismantil">@chrismantil</a></li>
 			</ul>
 		</div>
 </div>
