--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 
 <footer>
 
+	<div class="back-to-top">
+		<div class="top-arrow"></div>
+		<p>Back to Top</p>
+	</div>
 	<div class="footer-content">
 		<p>© 2014 Chris Mantil Design. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
 
