--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <meta name="twitter:image2" content="">
 <meta name="twitter:image3" content="">
 </head>
-<body>
+<body id="top">
 
 <header class="nav">
 	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
@@ -79,9 +79,9 @@
 
 <footer>
 
-	<div class="back-to-top">
+	<div class="back-to-top" href="#top">
 		<div class="top-arrow"></div>
-		<p>Back to Top</p>
+		<a href="#top">Back to Top</a>
 	</div>
 	<div class="footer-content">
 		<p>© 2014 Chris Mantil Design. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
