--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <meta name="twitter:image2" content="">
 <meta name="twitter:image3" content="">
 </head>
-<body id="top">
+<body>
 
 <header class="nav">
 	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
@@ -81,7 +81,7 @@
 
 	<div class="back-to-top" href="#top">
 		<div class="top-arrow"></div>
-		<a href="#top">Back to Top</a>
+		<a href="#">Back to Top</a>
 	</div>
 	<div class="footer-content">
 		<p>© 2014 Chris Mantil Design. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
