--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 		<a href="#">Back to Top</a>
 	</div>
 	<div class="footer-content">
-		<p>© 2014 Chris Mantil Design. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
-
+	<h3>Contact</h3>
 		<div class="footer-nav">
 			<ul>
 				<li><a href="tel:+6136177922">613-617-7922</a></li>
@@ -93,6 +92,7 @@
 				<li><a href="https://twitter.com/chrismantil">@chrismantil</a></li>
 			</ul>
 		</div>
+	<p>© 2014 Chris Mantil Design. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
 </div>
 
 </footer>
