--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<li><a href="https://twitter.com/chrismantil">@chrismantil</a></li>
 			</ul>
 		</div>
-	<p>© 2014 Chris Mantil Design. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
+	<p>© 2014 Chris Mantil. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
 </div>
 
 </footer>
