--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
+	<div class="portfolio">
+		<img src="img/dominion_city.png" alt="">
+		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+	</div>
+
 	<div id="about" class="portfolio">
 		<img src="img/about.png" alt="">
 	</div>
@@ -71,12 +76,22 @@
 		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
+	<div class="portfolio">
+		<img src="img/carlington_cup.png" alt="">
+		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+	</div>
+
 	<div id="contact" class="portfolio">
 		<img src="img/about.png" alt="">
 	</div>
 
 	<div class="portfolio">
 		<img src="img/risico.png" alt="">
+		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+	</div>
+
+	<div class="portfolio">
+		<img src="img/dorian_gray.png" alt="">
 		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
