Move From Mobile to Full

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 
 <header class="nav">
 	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
+		<div class="navbar">
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</div>
 </header>
-
-<div class="navbar">
-	<ul>
-		<li><a href="#about">About</a></li>
-		<li><a href="#contact">Contact</a></li>
-	</ul>
-</div>
 
 <!--Portfolio-->
 <div class="wrapper">
@@ -101,6 +100,10 @@
 	</div>
 
 </div>
+
+	<div class="full-portfolio">
+		<img src="http://placehold.it/250x150">
+	</div>
 
 <footer>
 
