--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Chris Mantil · Pretty. Good. Graphic Design. · Ottawa, Canada</title>
 <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/general.css">
 <link rel="shortcut icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/chris_mantil_favicon.ico" type="image/x-icon">
@@ -102,7 +103,11 @@
 </div>
 
 	<div class="full-portfolio">
-		<img src="http://placehold.it/250x150">
+
+		<img src="http://placehold.it/900x500">
+
+		<img src="http://placehold.it/900x900">
+
 	</div>
 
 <footer>
@@ -115,7 +120,7 @@
 	<h3>Contact</h3>
 		<div class="footer-nav">
 			<ul>
-				<li><a href="tel:+6136177922">613-617-7922</a></li>
+				<li><a href="tel:+6136177922">(613) 617-7922</a></li>
 				<li><a href="mailto:design@chrismantil">design@chrismantil.com</a></li>
 				<li><a href="https://twitter.com/chrismantil">@chrismantil</a></li>
 			</ul>
