--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 </head>
 <body>
 
-<header class="nav">
-		<div class="navbar">
-			<ul>
-				<li><a href="#about">About</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</div>
+<header class="clearfix">
+	<div class="navbar">
+		<ul>
+			<li><a href="#about">About</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</div>
 	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
 </header>
 
@@ -104,9 +104,9 @@
 
 	<div class="full-portfolio">
 
-		<img src="http://placehold.it/900x500">
+		<img src="img/welcome-banner.jpg" alt="">
 
-		<img src="http://placehold.it/900x900">
+		<img src="img/carlington-cup-full.jpg" alt="">
 
 	</div>
 
