Implementing Mobile Nav (again)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 <body>
 
 <header class="clearfix">
+	<div class="mobile-nav">
+		<ul>
+			<li><a href="#about">About</a></li>
+			<hr>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</div>
+
 	<div class="navbar">
 		<ul>
 			<li><a href="#about">About</a></li>
