--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 		</ul>
 	</div>
 
+	<a href="#nav" class="nav-btn" data-state="inactive"><img src="img/menu-icon.svg"></a>
+
 	<div class="navbar">
 		<ul>
 			<li><a href="#about">About</a></li>
