Mobile Nav Working! (Praise the Lord!)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
 <header class="clearfix">
-	<div class="mobile-nav">
+	<div class="mobile-nav" data-state="collapsed">
 		<ul>
 			<li><a href="#about">About</a></li>
 			<hr>
@@ -138,5 +138,6 @@
 	<p>© 2014 Chris Mantil. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
 </div>
 </footer>
+<script src="js/nav.js"></script>
 </body>
 </html>
