Mobile Nav is Finally Working

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</ul>
 	</div>
 
-	<a href="#nav" class="nav-btn" data-state="inactive"><img src="img/menu-icon.svg"></a>
+	<a href="#footer" class="nav-btn" data-state="inactive"><img src="img/menu-icon.svg"></a>
 
 	<div class="navbar">
 		<ul>
@@ -120,14 +120,15 @@
 
 	</div>
 
-<footer>
+<footer id="footer">
 
 	<div class="back-to-top" href="#top">
 		<div class="top-arrow"></div>
 		<a href="#">Back to Top</a>
 	</div>
 	<div class="footer-content">
-	<h3>Contact</h3>
+	<a href="#about"><h3>About</h3></a>
+	<a href="#contact"><h3>Contact</h3></a>
 		<div class="footer-nav">
 			<ul>
 				<li><a href="tel:+6136177922">(613) 617-7922</a></li>
