--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
 		<div class="top-arrow"></div>
 		<a href="#">Back to Top</a>
 	</div>
+	<div class="nav-bottom">
+		<a href="#about"><h3>About</h3></a>
+		<a href="#contact"><h3>Contact</h3></a>
+	</div>
 	<div class="footer-content">
-	<a href="#about"><h3>About</h3></a>
-	<a href="#contact"><h3>Contact</h3></a>
 		<div class="footer-nav">
 			<ul>
 				<li><a href="tel:+6136177922">(613) 617-7922</a></li>
@@ -136,7 +138,7 @@
 				<li><a href="https://twitter.com/chrismantil">@chrismantil</a></li>
 			</ul>
 		</div>
-	<p>© 2014 Chris Mantil. All work is the property of Chris Mantil and is not be used without his expressed permission.</p>
+	<p>© 2014 Chris Mantil. All work is the property of Chris Mantil and is not to be used without his expressed permission.</p>
 </div>
 </footer>
 <script src="js/nav.js"></script>
