--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="wrapper">
 
 	<div class="portfolio">
-		<img src="img/dominion_city.png" alt="">
+		<img src="img/carlington-cup-mobile.jpg" alt="">
 		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
@@ -77,7 +77,7 @@
 	</div>
 
 	<div class="portfolio">
-		<img src="img/carlington_cup.png" alt="">
+		<img src="img/risico-mobile.jpg" alt="">
 		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
