--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="wrapper">
 
 	<div class="portfolio">
-		<img src="img/dorian-mobile.jpg" alt="">
+		<img class="mobile-portfolio" src="img/dorian-mobile.jpg" alt="" data-state="inactive">
 		<div class="rollover" data-state="collapsed"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
 	</div>
 
@@ -141,6 +141,7 @@
 	<p>© 2014 Chris Mantil. All work is the property of Chris Mantil and is not to be used without his expressed permission.</p>
 </div>
 </footer>
+<script src="js/rollover.js"></script>
 <script src="js/nav.js"></script>
 </body>
 </html>
