--- a/index.html
+++ b/index.html
@@ -114,10 +114,19 @@
 
 	<div class="full-portfolio">
 
-		<img src="img/welcome-banner.jpg" alt="">
+		<div class="welcome">
+
+		</div>
 
 		<img src="img/carlington-cup-full.jpg" alt="">
 
+		<div class="hourly">
+			<img class="hourly-phone" src="img/hourly-phone.png">
+		</div>
+
+		<div class="poppets">
+			<img src="img/poppets-full.jpg" alt="">
+		</div>
 	</div>
 
 <footer id="footer">
