Added Poppets Imagery

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		</div>
 
 		<div class="poppets">
-			<img src="img/poppets-full.jpg" alt="">
+			<img class="poppets-logo" src="img/poppets-logo.png" alt="">
 		</div>
 	</div>
 
