--- a/index.html
+++ b/index.html
@@ -57,77 +57,26 @@
 <!--Portfolio-->
 <div class="wrapper">
 
-	<div class="portfolio">
-		<img src="img/dorian-mobile.jpg" alt="">
-		<div class="rollover" data-state="collapsed"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+	<div class="new">
+		<img src="img/dorian.jpg" alt="">
+		<div class="info">
+			<h2>Picture of Dorian Gray</h2>
+			<p>Typography/Cover Design</p>
+			<p>2012</p>
+		</div>
 	</div>
 
-	<div class="portfolio">
-		<img src="img/carlington-cup-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
-	</div>
-
-	<div class="portfolio">
-		<img src="img/hourly-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
-	</div>
-
-	<div id="about" class="portfolio">
-		<img src="img/about.png" alt="">
-	</div>
-
-	<div class="portfolio">
-		<img src="img/risico-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
-	</div>
-
-	<div class="portfolio">
-		<img src="img/poppets-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
-	</div>
-
-	<div class="portfolio">
-		<img src="img/venues-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
-	</div>
-
-	<div id="contact" class="portfolio">
-		<img src="img/about.png" alt="">
-	</div>
-
-	<div class="portfolio">
-		<img src="img/bond-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
-	</div>
-
-	<div class="portfolio">
-		<img src="img/echo-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
-	</div>
-
-	<div class="portfolio">
-		<img src="img/dominion-city-mobile.jpg" alt="">
-		<div class="rollover"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus libero felis, vel cursus justo pulvinar sit amet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent egestas metus sed velit sagittis semper.</p></div>
+	<div class="new">
+		<img src="img/risico.jpg" alt="">
+		<div class="info">
+			<h2>Risico</h2>
+			<p>Image Compositing</p>
+			<p>2012</p>
+		</div>
 	</div>
 
 </div>
 
-	<div class="full-portfolio">
-
-		<div class="welcome">
-
-		</div>
-
-		<img src="img/carlington-cup-full.jpg" alt="">
-
-		<div class="hourly">
-			<img class="hourly-phone" src="img/hourly-phone.png">
-		</div>
-
-		<div class="poppets">
-			<img class="poppets-logo" src="img/poppets-logo.png" alt="">
-		</div>
-	</div>
 
 <footer id="footer">
 
