--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 		</div>
 	</div>
 
+	<div class="new">
+		<img src="img/bond.jpg" alt="">
+		<div class="info">
+			<h2>BOND App</h2>
+			<p>UX Design</p>
+			<p>2012</p>
+		</div>
+	</div>
+
 </div>
 
 
