Pretty Good Design

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		</ul>
 	</div>
 	<h1 class="navlogo"><img src="img/chris_mantil_logo.svg" alt="Chris Mantil, Graphic Designer"></h1>
+	<p>Pretty. Good. Design.</p>
 </header>
 
 <!--Portfolio-->
@@ -60,7 +61,7 @@
 	<div class="new">
 		<img src="img/dorian.jpg" alt="">
 		<div class="info">
-			<h2>Picture of Dorian Gray</h2>
+			<h2>The Picture of Dorian Gray</h2>
 			<p>Typography/Cover Design</p>
 			<p>2012</p>
 		</div>
