--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
 <meta charset="utf-8">
-<title>Chris Mantil · Pretty. Good. Design. · Ottawa, Canada</title>
+<title>Chris Mantil · Coming Soon</title>
 <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/general.css">
