--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
 </head>
 <body>
 
+<div class="logo">
+<img src="img/chris_mantil_logo.svg" alt="chris mantil graphic design">
+</div>
+
 </body>
 </html>
